samples/_failures_safe/1761309376_b6972e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0760695.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a0760695.c:166:20: error: expected ‘;’ at end of input
  166 |             advance
      |                    ^
      |                    ;
./samples/SAFE/__tmp_a0760695.c:166:13: error: expected declaration or statement at end of input
  166 |             advance
      |             ^~~~~~~
./samples/SAFE/__tmp_a0760695.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0760695.c:166:13: error: expected declaration or statement at end of input
